tests/identities/dual_identity_d0/expects/dual_identity_d0_combdep.interp.expect
error: Cannot assign to forbidden input 'dut.b' after observing a combinationally dependent output
   ┌─ tests/identities/dual_identity_d0/dual_identity_d0.prot:24:18
   │
24 │         dut.b := b;
   │                  ^ Cannot assign to forbidden input 'dut.b' after observing a combinationally dependent output

Trace 0 execution failed.
---CODE---
101
